# my_job_board

./: .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  pytest.ini
job/: models.py  serializers.py  tests.py  urls.py  views.py
job/migrations/: 0001_initial.py  0002_job_owner.py
my_job_board/: asgi.py  settings.py  urls.py  wsgi.py
users/: auth_backends.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: generate_api_key.py
users/migrations/: 0001_initial.py  0002_remove_user_username_alter_user_email.py  0003_alter_user_managers.py
